[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "import-trail"
version = "0.1.0"
description = "A Python CLI tool to recursively trace and map import paths in your project, including relative and dynamic imports."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
import-trail = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
